--- a/html/japao.html
+++ b/html/japao.html
@@ -24,7 +24,7 @@
     <h3 class="category-title comida">🍣 PRATOS TÍPICOS</h3>
     <ul class="menu-list">
       <li>
-        <img src="../imagens/sushi.png" alt="Sushi">
+        <img src="../imagens/SUSHI.png" alt="Sushi">
         <div class="flexColunm"></div>
         <div class="flexColunmsInfos">
           <strong>Sushi</strong>
@@ -129,3 +129,4 @@
   </footer>
 </body>
 </html>
+
