--- a/html/equipe.html
+++ b/html/equipe.html
@@ -14,7 +14,7 @@
   </header>
 
   <nav>
-    <a href="../index.html">Início</a>
+    <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
     <a href="promocoes.html">Promoções</a>
