--- a/html/italia.html
+++ b/html/italia.html
@@ -10,12 +10,13 @@
   <header>🇮🇹 Itália</header>
 
   <nav>
-    <a href="../index.html">Início</a>
-    <a href="./sobre">Sobre</a>
-    <a href="./contato.html">Contato</a>
-    <a href="./promocoes.html">Promoções</a>
-    <a href="./localizacao.html">Localização</a>
-    <a href="./jogo.html">Jogo</a>
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+    <a href="promocoes.html">Promoções</a>
+    <a href="ajuda.html">Ajuda</a>
+    <a href="localizacao.html">Localização</a>
+    <a href="">Fórum</a>
   </nav>
 
   <section>
@@ -84,7 +85,7 @@
         </div>
       </li>
       <li>
-        <img src="../imagens/focaccia.png" alt="Focaccia">
+        <img src="../imagens/" alt="Focaccia">
         <div class="flexColunm"></div>
         <div class="flexColunmsInfos">
           <strong>Focaccia</strong>
