--- a/html/promocoes.html
+++ b/html/promocoes.html
@@ -13,13 +13,12 @@
   </header>
 
   <nav>
-    <a href="../index.html">Início</a>
+    <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
     <a href="promocoes.html">Promoções</a>
     <a href="ajuda.html">Ajuda</a>
     <a href="localizacao.html">Localização</a>
-    <a href="./jogo.html">Jogo</a>
   </nav>
 
   <section>
